--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,37 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="@color/yellow"
+        android:background="@drawable/background"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/bottom_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_bar" >
+        app:layout_constraintTop_toBottomOf="@id/top_bar">
 
         <Button
             android:id="@+id/button1"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button1"/>
+            android:text="@string/button1" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button2"/>
+            android:text="@string/button2" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button3"/>
+            android:text="@string/button3" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button4"/>
+            android:text="@string/button4" />
 
         <Button
             android:id="@+id/button5"
@@ -62,7 +63,7 @@
         android:layout_height="100dp"
         android:background="@color/purple_700"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView"
@@ -82,20 +83,33 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:scaleType="centerCrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/poster3" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:scaleType="centerCrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/poster4" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/disclaimer"
+        android:autoLink="web"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
