--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,79 +7,15 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:columnCount="2"
-        android:layoutAnimation="@anim/layout_anim"
-        android:orientation="horizontal"
-        android:useDefaultMargins="true"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/disclaimer">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster1"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_animation"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/star_vars_poster" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster2"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_animation"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ready_player_one" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster3"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_animation"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/item" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster4"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:clickable="true"
-            android:stateListAnimator="@animator/press_button_animation"
-            app:cardCornerRadius="15dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/poster_joker" />
-        </androidx.cardview.widget.CardView>
-    </GridLayout>
+        app:layout_constraintTop_toBottomOf="@+id/disclaimer"
+        tools:listitem="@layout/film_item" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
