--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/home"
+        android:title="@string/menu_main"
+        android:icon="@drawable/ic_baseline_home_24"/>
+    <item
         android:id="@+id/favorites"
         android:icon="@drawable/ic_round_favorite"
         android:title="@string/menu_favorites_title"
