--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+    <dimen name="margin_search_view">8dp</dimen>
+    <dimen name="margin_recycler_view">16dp</dimen>
 
 </resources>
