--- a/app/src/main/res/layout/fragment_selections.xml
+++ b/app/src/main/res/layout/fragment_selections.xml
@@ -7,7 +7,7 @@
     android:visibility="invisible"
     tools:visibility="visible"
     android:background="@drawable/background_selections"
-    tools:context=".SelectionsFragment">
+    tools:context=".view.fragments.SelectionsFragment">
 
 
 </FrameLayout>
