--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -82,6 +82,19 @@
         app:srcCompat="@drawable/ic_baseline_cloud_download_24"
         app:tint="@android:color/white"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/details_fab_watch_later"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:borderWidth="0dp"
+        android:translationX="144dp"
+        android:backgroundTint="@color/purple_500"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="left|bottom"
+        app:srcCompat="@drawable/ic_outline_watch_later_24"
+        app:tint="@android:color/white"/>
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:visibility="invisible"
