--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -86,9 +86,9 @@
         android:id="@+id/details_fab_watch_later"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/layout_margin_fab_watch_later"
         app:borderWidth="0dp"
-        android:translationX="144dp"
+        android:translationX="@dimen/translationX_watch_later"
         android:backgroundTint="@color/purple_500"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="left|bottom"
